# Rust-opaque-PAKE-PoC

./: .gitignore  Readme.md
opaque/: Cargo.toml
opaque/examples/: client.rs  example.rs  server.rs
opaque/src/: lib.rs
opaque/src/client/: client.rs  mod.rs
opaque/src/common/: common.rs  mod.rs
opaque/src/server/: mod.rs  server.rs
opaque/src/types/: ctx_client.rs  ctx_server.rs  mod.rs  types.rs
rust_opaque_pake/: Cargo.toml  Readme.md  toto
rust_opaque_pake/src/: main.rs
