[package]
name = "rust_opaque_pake"
version = "0.1.0"
authors = ["Filipe Fortunato <f.filipe.30.03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2c-rust-ref = { git = "https://github.com/armfazh/h2c-rust-ref" }
redox-ecc = { git = "https://github.com/armfazh/redox-ecc" }
hmac = "0.7.1"
sha3 = "0.8.2"
num-bigint = "0.2.6"
sodiumoxide = "0.2.5"